--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^7.3|^8.0",
         "flipbox/lumen-generator": "^8.2",
-        "laravel/lumen-framework": "^8.3.1"
+        "irazasyed/larasupport": "^1.7",
+        "laravel/lumen-framework": "^8.3.1",
+        "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
