--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.1
+            context: ./docker/8.1
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
@@ -24,7 +24,6 @@ services:
         depends_on:
             - mysql
             - redis
-            - meilisearch
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -56,19 +55,6 @@ services:
             test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
-    meilisearch:
-        image: 'getmeili/meilisearch:latest'
-        platform: linux/x86_64
-        ports:
-            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
-        volumes:
-            - 'sailmeilisearch:/data.ms'
-        networks:
-            - sail
-        healthcheck:
-            test: ["CMD", "wget", "--no-verbose", "--spider",  "http://localhost:7700/health"]
-            retries: 3
-            timeout: 5s
     mailhog:
         image: 'mailhog/mailhog:latest'
         ports:
@@ -83,6 +69,4 @@ volumes:
     sailmysql:
         driver: local
     sailredis:
-        driver: local
-    sailmeilisearch:
         driver: local
